--- a/styles/customize.css
+++ b/styles/customize.css
@@ -2,3 +2,16 @@
 .index-float {
   font-weight: normal;
 }
+
+.hr-d {
+  text-align: center;
+  border: 0;
+  margin: 1.5rem 0;
+  width: 100%;
+  height: 30px;
+  background-image: url(/img/yellow.gif);
+  background-repeat: no-repeat;
+  background-position: 50%;
+  background-size: auto 100%;
+  image-rendering: pixelated;
+}
